// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/tag/demo/basic.md correctly 1`] = `
<div>
  <div
    class="c7n-tag"
  >
    Tag 1
  </div>
  <div
    class="c7n-tag"
  >
    <a
      href="https://github.com/open-hand/choerodon-ui"
    >
      Link
    </a>
  </div>
  <div
    class="c7n-tag"
  >
    Tag 2
    <i
      class="icon icon-close"
    />
  </div>
  <div
    class="c7n-tag"
  >
    Prevent Default
    <i
      class="icon icon-close"
    />
  </div>
</div>
`;

exports[`renders ./components/tag/demo/checkable.md correctly 1`] = `
<div>
  <div
    class="c7n-tag c7n-tag-checkable c7n-tag-checkable-checked"
  >
    Tag1
  </div>
  <div
    class="c7n-tag c7n-tag-checkable c7n-tag-checkable-checked"
  >
    Tag2
  </div>
  <div
    class="c7n-tag c7n-tag-checkable c7n-tag-checkable-checked"
  >
    Tag3
  </div>
</div>
`;

exports[`renders ./components/tag/demo/colorful.md correctly 1`] = `
<div>
  <h4
    style="margin-bottom:16px"
  >
    Presets:
  </h4>
  <div>
    <div
      class="c7n-tag c7n-tag-magenta"
    >
      magenta
    </div>
    <div
      class="c7n-tag c7n-tag-red"
    >
      red
    </div>
    <div
      class="c7n-tag c7n-tag-volcano"
    >
      volcano
    </div>
    <div
      class="c7n-tag c7n-tag-orange"
    >
      orange
    </div>
    <div
      class="c7n-tag c7n-tag-gold"
    >
      gold
    </div>
    <div
      class="c7n-tag c7n-tag-lime"
    >
      lime
    </div>
    <div
      class="c7n-tag c7n-tag-green"
    >
      green
    </div>
    <div
      class="c7n-tag c7n-tag-cyan"
    >
      cyan
    </div>
    <div
      class="c7n-tag c7n-tag-blue"
    >
      blue
    </div>
    <div
      class="c7n-tag c7n-tag-geekblue"
    >
      geekblue
    </div>
    <div
      class="c7n-tag c7n-tag-purple"
    >
      purple
    </div>
  </div>
  <h4
    style="margin:16px 0"
  >
    Custom:
  </h4>
  <div>
    <div
      class="c7n-tag c7n-tag-has-color"
      style="background-color:#f50"
    >
      #f50
    </div>
    <div
      class="c7n-tag c7n-tag-has-color"
      style="background-color:#2db7f5"
    >
      #2db7f5
    </div>
    <div
      class="c7n-tag c7n-tag-has-color"
      style="background-color:#87d068"
    >
      #87d068
    </div>
    <div
      class="c7n-tag c7n-tag-has-color"
      style="background-color:#108ee9"
    >
      #108ee9
    </div>
  </div>
</div>
`;

exports[`renders ./components/tag/demo/control.md correctly 1`] = `
<div>
  <div
    class="c7n-tag"
  >
    Unremovable
  </div>
  <div
    class="c7n-tag"
  >
    Tag 2
    <i
      class="icon icon-close"
    />
  </div>
  <div
    class="c7n-tag"
  >
    Tag 3
    <i
      class="icon icon-close"
    />
  </div>
  <div
    class="c7n-tag"
    style="background:#fff;border-style:dashed"
  >
    <i
      class="icon icon-plus"
    />
     New Tag
  </div>
</div>
`;

exports[`renders ./components/tag/demo/hot-tags.md correctly 1`] = `
<div>
  <h6
    style="margin-right:8px;display:inline"
  >
    Categories:
  </h6>
  <div
    class="c7n-tag c7n-tag-checkable"
  >
    Movies
  </div>
  <div
    class="c7n-tag c7n-tag-checkable"
  >
    Books
  </div>
  <div
    class="c7n-tag c7n-tag-checkable"
  >
    Music
  </div>
  <div
    class="c7n-tag c7n-tag-checkable"
  >
    Sports
  </div>
</div>
`;
